@@ -1670,76 +1670,93 @@
 	<item id="2039" article="a" name="wall lamp" />
 	<item id="2040" article="a" name="lit wall lamp" />
 	<item id="2041" article="a" name="candelabrum">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="5000" />
 		<attribute key="stopduration" value="1" />
 	</item>
 	<item id="2042" article="a" name="lit candelabrum">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="5000" />
 		<attribute key="decayTo" value="2043" />
 		<attribute key="duration" value="180" />
 	</item>
 	<item id="2043" article="a" name="used candelabrum">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="4500" />
 	</item>
 	<item id="2044" article="a" name="lamp">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="3000" />
 		<attribute key="stopduration" value="1" />
 	</item>
 	<item id="2045" article="a" name="lit lamp">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="3000" />
 		<attribute key="decayTo" value="2046" />
 		<attribute key="duration" value="180" />
 	</item>
 	<item id="2046" article="a" name="used lamp">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="3000" />
 	</item>
 	<item id="2047" article="a" name="candlestick">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="300" />
 		<attribute key="stopduration" value="1" />
 	</item>
 	<item id="2048" article="a" name="lit candlestick">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="300" />
 		<attribute key="decayTo" value="2049" />
 		<attribute key="duration" value="240" />
 	</item>
 	<item id="2049" article="a" name="used candlestick">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="200" />
 		<attribute key="decayTo" value="0" />
 		<attribute key="duration" value="60" />
 	</item>
 	<item id="2050" article="a" name="torch">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="500" />
 		<attribute key="stopduration" value="1" />
 	</item>
 	<item id="2051" article="a" name="lit torch">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="500" />
 		<attribute key="decayTo" value="2053" />
 		<attribute key="duration" value="600" />
 	</item>
 	<item id="2052" article="a" name="torch">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="450" />
 		<attribute key="stopduration" value="1" />
 	</item>
 	<item id="2053" article="a" name="lit torch">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="450" />
 		<attribute key="decayTo" value="2055" />
 		<attribute key="duration" value="300" />
 	</item>
 	<item id="2054" article="a" name="torch">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="400" />
 		<attribute key="stopduration" value="1" />
 	</item>
 	<item id="2055" article="a" name="lit torch">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="400" />
 		<attribute key="decayTo" value="2056" />
 		<attribute key="duration" value="300" />
 	</item>
 	<item id="2056" article="a" name="burnt down torch">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="350" />
 		<attribute key="decayTo" value="0" />
 		<attribute key="duration" value="300" />
 	</item>
 	<item id="2057" article="a" name="candelabrum">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="5000" />
 	</item>
 	<item id="2058" article="a" name="torch bearer" />
@@ -1852,9 +1869,11 @@
 		<attribute key="weight" value="9200" />
 	</item>
 	<item id="2096" article="a" name="pumpkinhead">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="950" />
 	</item>
 	<item id="2097" article="a" name="lit pumpkinhead">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="1250" />
 	</item>
 	<item id="2098" article="a" name="globe" />
@@ -2068,12 +2087,14 @@
 		<attribute key="absorbPercentEnergy" value="10" />
 		<attribute key="showattributes" value="1" />
 	</item>
-	<item id="2162" article="a" name="magic lightwand">
+	<item id="2162" article="a" name="magic light wand">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="1500" />
 		<attribute key="stopduration" value="1" />
 		<attribute key="showduration" value="1" />
 	</item>
-	<item id="2163" article="a" name="magic lightwand">
+	<item id="2163" article="a" name="magic light wand">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="1500" />
 		<attribute key="decayTo" value="0" />
 		<attribute key="showduration" value="1" />
@@ -2156,6 +2177,7 @@
 		<attribute key="charges" value="1" />
 	</item>
 	<item id="2174" article="a" name="strange symbol">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="200" />
 	</item>
 	<item id="2175" article="a" name="spellbook">
@@ -3010,6 +3032,7 @@
 	</item>
 	<item id="2360" article="a" name="portable hole" />
 	<item id="2361" article="a" name="frozen starlight">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="20" />
 	</item>
 	<item id="2362" article="a" name="carrot of doom" plural="carrots of doom">
@@ -6856,9 +6879,7 @@
 	<item fromid="3737" toid="3738" article="a" name="pagoda" />
 	<item fromid="3739" toid="3742" article="a" name="huntress statue" />
 	<item id="3743" article="a" name="bamboo lamp" />
-	<item id="3744" article="a" name="skull candle">
-		<attribute key="weight" value="2200" />
-	</item>
+	<item id="3744" article="a" name="skull candle" />
 	<item fromid="3745" toid="3751" article="a" name="bamboo column" />
 	<item fromid="3752" toid="3755" article="a" name="bamboo pole" />
 	<item fromid="3756" toid="3757" article="a" name="rope bridge" />
@@ -9114,6 +9135,7 @@
 	</item>
 	<item id="5811" article="a" name="mermaid" />
 	<item fromid="5812" toid="5813" article="a" name="skull candle">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="2200" />
 	</item>
 	<item fromid="5814" toid="5827" name="small lava cracks">
@@ -11139,6 +11161,7 @@
 	<item fromid="6474" toid="6475" name="planks" />
 	<item fromid="6476" toid="6488" name="debris" />
 	<item fromid="6489" toid="6490" article="a" name="christmas branch">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="1800" />
 	</item>
 	<item id="6491" article="a" name="firefly">
@@ -16847,6 +16870,7 @@
 		<attribute key="weight" value="2200" />
 	</item>
 	<item id="9742" article="a" name="charged ghost charm">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="900" />
 	</item>
 	<item id="9745" article="a" name="box ramp">
@@ -17306,6 +17330,7 @@
 		<attribute key="weight" value="500" />
 	</item>
 	<item id="9956" article="a" name="magical torch">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="description" value="You have a day to light all important locations before the torch stops burning." />
 		<attribute key="weight" value="1500" />
 		<attribute key="defense" value="25" />
@@ -20782,6 +20807,7 @@
 		<attribute key="extradef" value="3" />
 	</item>
 	<item id="12651" article="a" name="black jade cobra">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="650" />
 	</item>
 	<item fromid="12652" toid="12653" article="a" name="statue" />
@@ -22003,6 +22029,7 @@
 		<attribute key="showduration" value="0" />
 	</item>
 	<item id="13875" article="a" name="shimmer glower">
+		<attribute key="slotType" value="ammo"/>
 		<attribute key="weight" value="1000" />
 		<attribute key="decayTo" value="0" />
 		<attribute key="duration" value="604800" />
